# fish-mip-emulator

./: .gitignore  README.md  nco_4.2.5-1_amd64.deb  pyproject.toml  run_train.sh
emulator/dataloading/: boats.py  dataloader.py  macroecological.py
emulator/inference/: data_models.py  server.py
emulator/models/: mean_guesser.py  model.py  pca.py  random_guesser.py  simple_nn.py
emulator/models/nn/: fourier_operator.py  helpers.py  lstm.py  nn_model.py  rnn.py  simple_nn.py  unet.py
emulator/training/: data_models.py  evaluation_helpers.py  plotting.py  train.py
