[tool.poetry]
name = "fish-mip-emulator"
version = "0.1.0"
description = ""
authors = ["David Robinson <david.robinson@recoverx.com>"]

[tool.poetry.dependencies]
python = "^3.8"
netCDF4 = "^1.6.1"
scikit-learn = "^1.1.2"
xarray = "^2022.10.0"
cftime = "^1.6.2"
nctoolkit = "^0.7.6"
debugpy = "^1.6.3"
wandb = "^0.13.5"
torch = "^1.13.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
